trocada a cor da camiseta de azul para navy

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <tbody>
             <tr>
                 <td>Camiseta</td>
-                <td>Preta</td>
+                <td>Navy</td>
                 <td>M</td>
                 <td>R$ 70,00</td>
                 <td>Em Estoque</td>
