trocada disponibilidade de calças jeans de esgotado para em estoque

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <td>Azul</td>
                 <td>P</td>
                 <td>R$ 160,00</td>
-                <td>Esgotado</td>
+                <td>Em Estoque</td>
             </tr>
         </tbody>
     </table>
