adicionado novo produto em estoque - agasalho azul - na tabela.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
                 <td>R$ 160,00</td>
                 <td>Em Estoque</td>
             </tr>
+            <tr>
+                <td>Agasalho</td>
+                <td>Azul</td>
+                <td>G</td>
+                <td>R$ 190,00</td>
+                <td>Em Estoque</td>
+            </tr>
         </tbody>
     </table>
     <br>
