--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <td>Navy</td>
                 <td>M</td>
                 <td>R$ 70,00</td>
-                <td>Em Estoque</td>
+                <td>Indisponível</td>
             </tr>
             <tr>
                 <td>Calça Jeans</td>
