trocada a cor da camiseta para vermelha e disponibilidade para Em Estoque

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <tbody>
             <tr>
                 <td>Camiseta</td>
-                <td>Navy</td>
+                <td>Vermelha</td>
                 <td>M</td>
                 <td>R$ 70,00</td>
-                <td>Indisponível</td>
+                <td>Em Estoque</td>
             </tr>
             <tr>
                 <td>Calça Jeans</td>
