--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <tbody>
             <tr>
                 <td>Camiseta</td>
-                <td>Vermelha</td>
+                <td>Verde</td>
                 <td>M</td>
                 <td>R$ 89,99</td>
                 <td>Em Estoque</td>
