--- a/index.html
+++ b/index.html
@@ -88,14 +88,21 @@
                     <td><a href="#">Bermuda</a></td>
                     <td>Roxa</td>
                     <td>G</td>
-                    <td>R$ 69.99</td>
+                    <td>R$ 69,99</td>
                     <td>Em Estoque</td>
                 </tr>
                 <tr>
                     <td><a href="#">Boné</a></td>
                     <td>Branco</td>
                     <td>único</td>
-                    <td>R$ 50.99</td>
+                    <td>R$ 50,99</td>
+                    <td>Em Estoque</td>
+                </tr>
+                <tr>
+                    <td>Tênis</td>
+                    <td>Preto</td>
+                    <td>42</td>
+                    <td>R$ 99,89</td>
                     <td>Em Estoque</td>
                 </tr>
             </tbody>
