adiciona link de compra para tênis

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <td>Em Estoque</td>
                 </tr>
                 <tr>
-                    <td>Tênis</td>
+                    <td><a href="#">Tênis</a></td>
                     <td>Preto</td>
                     <td>42</td>
                     <td>R$ 99,89</td>
