corrige e remove linhas de código desnecessárias

--- a/index.html
+++ b/index.html
@@ -10,33 +10,27 @@
     <style>
         #table-1 {
             border-collapse: collapse;
-        
+            width: 100%;
         }
 
         th, td {
             padding: 8px;
+            height: 20px;
+            text-align: left;
+            vertical-align: middle;
         }
 
         tr:nth-child(even) {
             background-color: #f2f2f2;
         }
 
+        tr:hover {
+            background-color: yellowgreen;
+        }
+
         th {
             background-color: #04AA6D;
             color: white;
-            text-align: center;
-            height: 20px;
-            vertical-align: middle;
-        }
-
-        td {
-            text-align: left;
-            height: 20px;
-            vertical-align: middle;
-        }
-
-        tr:hover {
-            background-color: yellowgreen;
         }
 
         a {
