adiciona novos produtos e estiliza tabela

--- a/index.html
+++ b/index.html
@@ -79,6 +79,13 @@
                     <td>Em Estoque</td>
                 </tr>
                 <tr>
+                    <td><a href="#">Luvas</a></td>
+                    <td>Amarelo</td>
+                    <td>único</td>
+                    <td>R$ 15,99</td>
+                    <td>Em Estoque</td>
+                </tr>
+                <tr>
                     <td><a href="#">Bermuda</a></td>
                     <td>Roxa</td>
                     <td>G</td>
